cleanup - thanks to Thorsten's bugfinder...